april 2017 review changes

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading"><b>D. Kaar</b> Dental Hygienist and Practice Manager</div>
+            <div class="panel-heading"><b>Dee. Kaar</b> Dental Hygienist and Practice Manager</div>
             <div class="panel-body">
                 <p>Qualified as a dental surgery assistant in Cork University Dental Hospital.</p>
                 She then obtained her diploma in Dental Hygiene from the royal dental hospital in London, and worked as a dental
@@ -99,10 +99,10 @@
             </div>
         </div>
         <div class="panel panel-default">
-            <div class="panel-heading"><b>Agnieszka Ormanowska</b> Dental Surgery Assistant. Has worked at the surgery for 9 years</div>
+            <div class="panel-heading"><b>Agnieszka Ormanowska</b> Dental Surgery Assistant</div>
             <div class="panel-body">                
                 Agnieszka Ormanowska, is our qualified dental nurse and is a most valued member of staff.
-                Agnieszka has been with the practice for over six years. She is extremely capable and competent and does everything she can to make your trip to the dentist relaxed and trouble free. Her gentle and caring nature will ensure you will feel at ease throughout your visit.
+                Agnieszka has been with the practice for nearly ten years. She is extremely capable and competent and does everything she can to make your trip to the dentist relaxed and trouble free. Her gentle and caring nature will ensure you will feel at ease throughout your visit.
             </div>
         </div>
         <div class="panel panel-default">
@@ -120,10 +120,7 @@
             &copy; <span class="this-year">2014</span> The Dental Surgery, Western Road
         </p>
         <a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-            <img src="images/idalogo.gif" width="70" height="50" title="IDA logo" />
-        </a>
-        <a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-            <img src="images/idatext.gif" width="200" height="40" title="IDA text" />
+            <img src="images/ida-logo.png" width="137" height="70" title="IDA logo" />
         </a>
         <a href="https://facebook.com/169884199694878" title="Find us on Facebook" target="_blank">
             <img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27" title="Find us on Facebook" />
