--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -151,7 +151,7 @@
 			<div class="panel panel-default">
 			  <div class="panel-heading"><b>7. Mouthguards</b></div>
 			  <div class="panel-body">
-				Sports mouthguards are available for a fee of &euro;60.<br /> Available in Tipperary, Ireland and Munster colours.
+				Sports mouthguards are available for a fee of &euro;70.<br /> Available in Tipperary, Ireland and Munster colours.
 				(Other colours are available by arrangement and with notice)<br /> The first visit will involve taking impressions, followed by a subsequent visit 
 				(approximately two days later) to fit the mouthguard.
 			  </div>
@@ -164,12 +164,9 @@
 			<br />
 			&copy; <span class="this-year">2014</span> The Dental Surgery, Western Road
 		</p>        
-		<a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-			<img src="images/idalogo.gif" width="70" height="50" title="IDA logo" />
-		</a>
-		<a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-			<img src="images/idatext.gif" width="200" height="40" title="IDA text" />
-		</a>
+        <a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
+            <img src="images/ida-logo.png" width="137" height="70" title="IDA logo" />
+        </a>
 		<a href="https://facebook.com/169884199694878" title="Find us on Facebook" target="_blank">
 			<img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27" title="Find us on Facebook" />
 		</a>
