--- a/feeguide.html
+++ b/feeguide.html
@@ -71,10 +71,8 @@
 			<div class="col-lg-11">
                 <h3>
                     *2017 Update. As announced in Budget 2017 last October, the Treatment Benefit scheme is being extended to cover self-employed
-                    PRSI contributors <u>and their dependent spouses</u> for the first time.
+                    PRSI contributors <u>and their dependent spouses</u> for one examination per year, for the first time.
                 </h3>
-				<h3>Following the Government's recent budget, the PRSI scheme has been scrapped.<br />
-				These changes come into effect from the 1st January 2010.</h3>
 				<br />
 				<p>Under the PRSI scheme, from the 1st Januuary 2010, the scheme will only cover one examination every 12 months. 
 				This does not include any other diagnoses,
@@ -123,12 +121,9 @@
 			<br />
 			&copy; <span class="this-year">2014</span> The Dental Surgery, Western Road
 		</p>        
-		<a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-			<img src="images/idalogo.gif" width="70" height="50" title="IDA logo" />
-		</a>
-		<a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-			<img src="images/idatext.gif" width="200" height="40" title="IDA text" />
-		</a>
+        <a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
+            <img src="images/ida-logo.png" width="137" height="70" title="IDA logo" />
+        </a>
 		<a href="https://facebook.com/169884199694878" title="Find us on Facebook" target="_blank">
 			<img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27" title="Find us on Facebook" />
 		</a>
