--- a/index.html
+++ b/index.html
@@ -1,200 +1,207 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dental Care, Clonmel, Co. Tipperary, specialise in a wide range of dental treatment including implants, teeth bleaching, crown / bridge &amp; venner work.">
     <meta name="author" content="The Dental Surgery">
-
     <title>Gerry Kaar - Dental Surgeon and Associates | Home</title>
-
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
     <!-- Custom styles for this template -->
     <link href="css/carousel-base.css" rel="stylesheet">
     <link href="css/dentistkaarstyle.css" rel="stylesheet">
-  </head>
-  <body>
+</head>
+<body>
     <div class="navbar-wrapper">
-      <div class="container header">
-		<div class="row">
-			<div id="header-logo" class="col-md-3">
-				<img src="images/logo.png" />
-			</div>
-			<div id="header-title" class="col-md-6 text-center">
-				<h1>The Dental Surgery</h1>
-				<h3>Western Road, Clonmel</h3>
-			</div>
-			<div id="header-address" class="col-md-3 text-right">
-				The Dental Surgery<br />
-				Western Road<br />
-				Clonmel<br />
-				Co. Tipperary<br />
-				<b>Tel: 052-6121784</b>
-			</div>
-		</div>
-        <div class="navbar navbar-default" role="navigation">
-          <div id="index-nav" class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-			  <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home home-icon"></span></a>
+        <div class="container header">
+            <div class="row">
+                <div id="header-logo" class="col-md-3">
+                    <img src="images/logo.png" />
+                </div>
+                <div id="header-title" class="col-md-6 text-center">
+                    <h1>The Dental Surgery</h1>
+                    <h3>Western Road, Clonmel</h3>
+                </div>
+                <div id="header-address" class="col-md-3 text-right">
+                    The Dental Surgery<br />
+                    Western Road<br />
+                    Clonmel<br />
+                    Co. Tipperary<br />
+                    <b>Tel: 052-6121784</b>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="feeguide.html">Fee Guide</a></li>
-                <li><a href="privatefees.html">Private Fees</a></li>
-                <li><a href="gms.html">GMS Medical Cards</a></li>
-                <li><a href="findus.html">How To Find Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-				<li><a href="faq.html">F.A.Q.</a></li>
-              </ul>
+            <div class="navbar navbar-default" role="navigation">
+                <div id="index-nav" class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-home home-icon"></span></a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="feeguide.html">Fee Guide</a></li>
+                            <li><a href="privatefees.html">Private Fees</a></li>
+                            <li><a href="gms.html">GMS Medical Cards</a></li>
+                            <li><a href="findus.html">How To Find Us</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="faq.html">F.A.Q.</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item active">
-		<img src="images/practice.png" alt="Dental Pracice">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Mouth Cancer Awareness Day 2017</h1>
-			  <p>We are participating in the Mouth Cancer Awareness Day in September 2017.</p>
-              <p><a class="btn btn-lg btn-primary" href="oralcancerawareness.html" role="button">Find Out More</a></p>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="images/practice.png" alt="Dental Pracice">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Welcome to the Dental Surgery</h1>
+                        <p>We are currently celebrating our <span id="celebrating">28th</span> year at the practice!</p>
+                        <p><a class="btn btn-lg btn-primary" href="findus.html" role="button">Find Us</a></p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-	<div class="item">
-		<img src="images/practice.png" alt="Dental Pracice">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Welcome to the Dental Surgery</h1>
-              <p>We are currently celebrating our <span id="celebrating">28th</span> year at the practice!</p>
-              <p><a class="btn btn-lg btn-primary" href="findus.html" role="button">Find Us</a></p>
+            <div class="item">
+                <img src="images/practice.png" alt="Dental Pracice">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <img src="images/ida-logo-2017.png" width="150" height="150" title="Irish Dental Association Member 2017" />
+                        <br /><br />
+                        <p>Irish Dental Association Member 2017</p>                        
+                    </div>                    
+                </div>
             </div>
-          </div>
-        </div>
-	<div class="item">
-		<img src="images/practice.png" alt="Dental Pracice">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>New! Clinical Denture Service</h1>
-              <p>Our new clinical dental technician is available for all your denture needs every<br />Friday from 2-4 pm</p>
+            <div class="item">
+                <img src="images/practice.png" alt="Dental Pracice">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>Mouth Cancer Awareness Day 2017</h1>
+                        <p>We are participating in the Mouth Cancer Awareness Day in September 2017.</p>
+                        <p><a class="btn btn-lg btn-primary" href="oralcancerawareness.html" role="button">Find Out More</a></p>
+                    </div>
+                </div>
+            </div>            
+            <div class="item">
+                <img src="images/practice.png" alt="Dental Pracice">
+                <div class="container">
+                    <div class="carousel-caption">                        
+                        <h1>New! Clinical Denture Service</h1>
+                        <p>Our new clinical dental technician is available for all your denture needs every<br />Friday from 2-4 pm</p>
+                        <br /><br />
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
     </div><!-- /.carousel -->
     <div class="container marketing">
-      <div class="row">
-        <div class="col-lg-4">
-          <span style="font-size: 10em" class="glyphicon glyphicon-heart"></span>
-          <h2>Our Commitment</h2>
-          <p class="sub-heading-text">We are committed to providing the best quality dental healthcare available, consistently and in an environment of mutual respect for both patients and staff through effective teamwork.</p>
-		  <p class="sub-heading-text">We are committed to carrying out all activities under the umbrella of recommended best practice with the resources available.</p>
-          <p><a class="btn btn-default" href="about.html" role="button">About Us &raquo;</a></p>
+        <div class="row">
+            <div class="col-lg-4">
+                <span style="font-size: 10em" class="glyphicon glyphicon-heart"></span>
+                <h2>Our Commitment</h2>
+                <p class="sub-heading-text">We are committed to providing the best quality dental healthcare available, consistently and in an environment of mutual respect for both patients and staff through effective teamwork.</p>
+                <p class="sub-heading-text">We are committed to carrying out all activities under the umbrella of recommended best practice with the resources available.</p>
+                <p><a class="btn btn-default" href="about.html" role="button">About Us &raquo;</a></p>
+            </div>
+            <div class="col-lg-4">
+                <span style="font-size: 10em" class="glyphicon glyphicon-time"></span>
+                <h2>Opening Hours</h2>
+                <ul class="list-group" id="OpeningDays">
+                    <li class="list-group-item"><span class="opening-day">Sunday and bank holiday weekends</span> CLOSED</li>
+                    <li class="list-group-item"><span class="opening-day">Monday</span> 9:00 - 13:00, 14:00 - 18:00</li>
+                    <li class="list-group-item"><span class="opening-day">Tuesday</span> 9:00 - 13:00, 14:00 - 18:00</li>
+                    <li class="list-group-item"><span class="opening-day">Wednesday</span> 9:00 - 13:00, 14:00 - 18:00</li>
+                    <li class="list-group-item"><span class="opening-day">Thursday</span> 9:00 - 13:00, 14:00 - 18:00</li>
+                    <li class="list-group-item"><span class="opening-day">Friday</span> 9:00 - 13:00, 14:00 - 18:00</li>
+                    <li class="list-group-item"><span class="opening-day">Saturday</span> 9:00 - 13:00<br /><i>By appointment only</i></li>
+                </ul>
+                <p><a class="btn btn-default" href="contact.html" role="button">Contact &raquo;</a></p>
+            </div>
+            <div class="col-lg-4">
+                <span style="font-size: 10em" class="glyphicon glyphicon-map-marker"></span>
+                <h2>Directions</h2>
+                <p class="sub-heading-text">Coming from the Cahir Road, go straight through the roundabout on the Western Road at The Western Medical Centre and Pharmacy, pass the South Tipperary General Hospital on the left. The Dental Practice is 200 metres further on the right before the traffic lights at the shop. Parking in front of building for patients.</p>
+                <p><a class="btn btn-default" href="findus.html" role="button">Find Us &raquo;</a></p>
+            </div>
         </div>
-		<div class="col-lg-4">
-          <span style="font-size: 10em" class="glyphicon glyphicon-time"></span>
-          <h2>Opening Hours</h2>
-          <ul class="list-group" id="OpeningDays">
-			<li class="list-group-item"><span class="opening-day">Sunday and bank holiday weekends</span> CLOSED</li>
-			<li class="list-group-item"><span class="opening-day">Monday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-			<li class="list-group-item"><span class="opening-day">Tuesday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-			<li class="list-group-item"><span class="opening-day">Wednesday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-			<li class="list-group-item"><span class="opening-day">Thursday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-			<li class="list-group-item"><span class="opening-day">Friday</span> 9:00 - 13:00, 14:00 - 18:00</li>
-			<li class="list-group-item"><span class="opening-day">Saturday</span> 9:00 - 13:00<br /><i>By appointment only</i></li>
-		  </ul>
-          <p><a class="btn btn-default" href="contact.html" role="button">Contact &raquo;</a></p>
-        </div>
-        <div class="col-lg-4">
-          <span style="font-size: 10em" class="glyphicon glyphicon-map-marker"></span>
-          <h2>Directions</h2>
-          <p class="sub-heading-text">Coming from the Cahir Road, go straight through the roundabout on the Western Road at The Western Medical Centre and Pharmacy, pass the South Tipperary General Hospital on the left. The Dental Practice is 200 metres further on the right before the traffic lights at the shop. Parking in front of building for patients.</p>
-          <p><a class="btn btn-default" href="findus.html" role="button">Find Us &raquo;</a></p>
-        </div>
-      </div>
-      <footer>
-        <p class="pull-right text-right">
-			<a href="#">Back to top</a>
-			<br />
-			&copy; <span class="this-year">2014</span> The Dental Surgery, Western Road
-		</p>        
-		<a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-			<img src="images/idalogo.gif" width="70" height="50" title="IDA logo" />
-		</a>
-		<a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
-			<img src="images/idatext.gif" width="200" height="40" title="IDA text" />
-		<a href="https://facebook.com/169884199694878" title="Find us on Facebook" target="_blank">
-			<img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27" title="Find us on Facebook" />
-		</a>		
-      </footer>
+        <footer>
+            <p class="pull-right text-right">
+                <a href="#">Back to top</a>
+                <br />
+                &copy; <span class="this-year">2014</span> The Dental Surgery, Western Road
+            </p>
+            <a href="http://www.dentist.ie" title="Irish Dental Association" target="_blank">
+                <img src="images/ida-logo.png" width="137" height="70" title="IDA logo" />
+            </a>
+            <a href="https://facebook.com/169884199694878" title="Find us on Facebook" target="_blank">
+                <img src="images/FB-FindUsonFacebook-online-144.png" width="144" height="27" title="Find us on Facebook" />
+            </a>
+        </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	<script type="text/javascript">
-	$(function() {
-		//highlight today in opening hours
-		var day = new Date().getDay() + 1;		
-		$("#OpeningDays li:nth-child("+ day +")").addClass("active");
-		
-		var openingYear = 1988;
-		var yearsOpen = new Date().getFullYear() - openingYear;
-		var celebrating = yearsOpen.toString().split("");
-		var suffix = "";
-		
-		switch (celebrating[1]) {
-			case "1":
-				suffix = "st";
-				break;
-			case "2":
-				suffix = "nd";
-				break;
-			case "3":
-				suffix = "rd";
-				break;
-			default:
-				suffix = "th";				
-		}
-		
-		$("#celebrating").html(yearsOpen + suffix);
-		$(".this-year").html(new Date().getFullYear());
-	});
-	</script>
-	<script type="text/javascript">
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script type="text/javascript">
+        $(function () {
+            //highlight today in opening hours
+            var day = new Date().getDay() + 1;
+            $("#OpeningDays li:nth-child(" + day + ")").addClass("active");
 
-	  ga('create', 'UA-18019923-1', 'auto');
-	  ga('send', 'pageview');
+            var openingYear = 1988;
+            var yearsOpen = new Date().getFullYear() - openingYear;
+            var celebrating = yearsOpen.toString().split("");
+            var suffix = "";
 
-	</script>
-  </body>
+            switch (celebrating[1]) {
+                case "1":
+                    suffix = "st";
+                    break;
+                case "2":
+                    suffix = "nd";
+                    break;
+                case "3":
+                    suffix = "rd";
+                    break;
+                default:
+                    suffix = "th";
+            }
+
+            $("#celebrating").html(yearsOpen + suffix);
+            $(".this-year").html(new Date().getFullYear());
+        });
+    </script>
+    <script type="text/javascript">
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-18019923-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+</body>
 </html>
