Add Connor and Valerie to about page

--- a/about.html
+++ b/about.html
@@ -1,10 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dental Care, Clonmel, Co. Tipperary, specialise in a wide range of dental treatment including implants, teeth bleaching, crown / bridge &amp; venner work.">
+    <meta name="description"
+        content="Dental Care, Clonmel, Co. Tipperary, specialise in a wide range of dental treatment including implants, teeth bleaching, crown / bridge &amp; venner work.">
     <meta name="author" content="The Dental Surgery">
     <title>Gerry Kaar - Dental Surgeon and Associates | About</title>
     <link rel="icon" type="image/favicon" href="images/favicon.ico" />
@@ -19,7 +21,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/dentistkaarstyle.css" rel="stylesheet">
-  </head>
+</head>
+
 <body>
     <div class="container header">
         <div class="row">
@@ -77,29 +80,58 @@
             </div>
         </div>
         <div class="panel panel-default">
+            <div class="panel-heading"><b>Connor Slattery</b> Dental Surgeon</div>
+            <div class="panel-body">
+                <p>Connor qualified from Cardiff University in 2016. He has worked in private practice since then in New
+                    Forest and Bournemouth.</p>
+                <p>Connor is interested in all aspects of general dentistry and enjoys the variety dentistry offers.
+                    Having
+                    recently relocated to Ireland, Connor is looking forward to the new work opportunities and
+                    strengthening his family connections.</p>
+            </div>
+        </div>
+        <div class="panel panel-default">
             <div class="panel-heading"><b>Dee. Kaar</b> Dental Hygienist and Practice Manager</div>
             <div class="panel-body">
                 <p>Qualified as a dental surgery assistant in Cork University Dental Hospital.</p>
-                She then obtained her diploma in Dental Hygiene from the royal dental hospital in London, and worked as a dental
+                She then obtained her diploma in Dental Hygiene from the royal dental hospital in London, and worked as
+                a dental
                 hygienist in general practice in the UK.
-                Since then she has worked at the surgery in Clonmel with Gerry on a part-time basis, while at the same time balancing
+                Since then she has worked at the surgery in Clonmel with Gerry on a part-time basis, while at the same
+                time balancing
                 time at home raising her family.
-                She has also obtained a degree in Business Studies from Tipperary Institute, and has used this experience
+                She has also obtained a degree in Business Studies from Tipperary Institute, and has used this
+                experience
                 to help with the management of the practice.
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading"><b>Agnieszka Ormanowska</b> Dental Surgery Assistant</div>
-            <div class="panel-body">                
+            <div class="panel-body">
                 Agnieszka Ormanowska, is our qualified dental nurse and is a most valued member of staff.
-                Agnieszka has been with the practice for nearly ten years. She is extremely capable and competent and does everything she can to make your trip to the dentist relaxed and trouble free. Her gentle and caring nature will ensure you will feel at ease throughout your visit.
+                Agnieszka has been with the practice for nearly ten years. She is extremely capable and competent and
+                does everything she can to make your trip to the dentist relaxed and trouble free. Her gentle and caring
+                nature will ensure you will feel at ease throughout your visit.
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading"><b>Claire Coleman</b>, Clinical Dental Technician</div>
             <div class="panel-body">
-                Claire is a registered dental care professional who is trained and qualified to provide a range of denture services directly to patients and services that were previously only available through your dentist.<br /><br />
-                Claire graduated with a degree in Dental Technology in 1998 from Manchester Metropolitan University. After two years working in the Manchester Dental Hospital she moved to Ireland to join her family run dental laboratory in Waterford. During this time she returned to college to gain a Post Graduate Diploma in Clinical Dental Technology at the Dublin Dental Hospital. Claire now specialises in dentures; seeing the patient through from treatment planning to fitting the denture and offering a personalised service.
+                Claire is a registered dental care professional who is trained and qualified to provide a range of
+                denture services directly to patients and services that were previously only available through your
+                dentist.<br /><br />
+                Claire graduated with a degree in Dental Technology in 1998 from Manchester Metropolitan University.
+                After two years working in the Manchester Dental Hospital she moved to Ireland to join her family run
+                dental laboratory in Waterford. During this time she returned to college to gain a Post Graduate Diploma
+                in Clinical Dental Technology at the Dublin Dental Hospital. Claire now specialises in dentures; seeing
+                the patient through from treatment planning to fitting the denture and offering a personalised service.
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><b>Valerie Hayes</b>, Dental Surgery Assistant</div>
+            <div class="panel-body">
+                Valerie is a qualified dental nurse and has recently joined our dental team. She is looking forward to
+                working with Connor and helping him with patient care.
             </div>
         </div>
     </div>
@@ -128,7 +160,7 @@
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-18019923-1', 'auto');
@@ -136,4 +168,5 @@
 
     </script>
 </body>
+
 </html>
