--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
             <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
             <div class="item active">
@@ -84,6 +85,16 @@
                     </div>
                 </div>
             </div>
+            <div class="item">
+                <img src="images/practice.png" alt="Dental Pracice">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <h1>We are delighted to welcome<br />Dr. Connor Slattery to the surgery</h1>
+                        <br />
+                        <p><a class="btn btn-lg btn-primary" href="about.html" role="button">Find Out More</a></p>
+                    </div>
+                </div>
+            </div>            
             <div class="item">
                 <img src="images/practice.png" alt="Dental Pracice">
                 <div class="container">
